src/objects/Jedi_Level__c.object
<CustomObject>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jedi_Level_Image__c</fullName>
        <formula>IMAGE(Image_URL__c, Name, 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jedi Level Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Points_Given_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of points that a user can give to another user without having Trust Approval. If the user has given more points out then the Trust Team will have to approve the Badge.</inlineHelpText>
        <label>Max Points Given Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>Physical_Reward__c</referenceTo>
        <relationshipLabel>Jedi Levels</relationshipLabel>
        <relationshipName>Jedi_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points_Required__c</fullName>
        <label>Points Required</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RenderImage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Render Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderReward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RenderReward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderWYCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RenderWYCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Render_Reward__c</fullName>
        <formula>NOT(ISBLANK(Physical_Reward__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RewardName__c</fullName>
        <formula>Physical_Reward__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RewardName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatYouCanDo_Dev_QA__c</fullName>
        <label>What You Can Do (Dev/QA)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WhatYouCanDo__c</fullName>
        <label>What You Can Do</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Jedi Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Jedi_Level_Image__c</columns>
        <columns>Points_Required__c</columns>
        <columns>Physical_Reward__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jedi Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jedi Levels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>